--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_in">Entrar</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -15,7 +15,7 @@
         completions."
     </string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_principal">PrincipalActivity</string>
+    <string name="title_activity_principal">Principal</string>
     <string name="title_activity_frequencia">Frequencia</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
@@ -110,6 +110,6 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="title_activity_lista_item">ListaItemActivity</string>
-    <string name="title_activity_lista_item_nota">ListaItemNotaActivity</string>
+    <string name="title_activity_lista_item">Faltas</string>
+    <string name="title_activity_lista_item_nota">Notas</string>
 </resources>
